# mukduk

./: Cargo.toml  README.md  example-config.yml
.github/workflows/: release.yml
src/: cli.rs  config.rs  fzf.rs  helper.rs  main.rs  multiplexer.rs  project.rs  tmux.rs  zellij.rs
src/commands/: mod.rs
src/commands/project/: mod.rs
src/multiplexer/: mod.rs  tmux.rs  zellij.rs
src/multiplexer/tmux/: mod.rs
src/multiplexer/zellij/: mod.rs
