[package]
name = "mukduk"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "mukduk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive", "env"] }
clap-verbosity-flag = "2.0.1"
colored = "2.0.4"
env_logger = "0.10.0"
inquire = "0.6.2"
log = "0.4.20"
thiserror = "1.0.49"

[dev-dependencies]
pretty_assertions = "1.4.0"
