[package]
name = "mukduk"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "mukduk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive", "env"] }
clap-verbosity-flag = "2.0.1"
colored = "2.0.4"
env_logger = "0.10.0"
inquire = "0.6.2"
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.49"
git_lib = { path = "../git_repo/git_lib" }
toml = "0.8.8"

[dev-dependencies]
pretty_assertions = "1.4.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
